Add navigator + refactor gradle plugins